# DHMonitorWallGRPC

./: CMakeLists.txt  Dockerfile  README.md
include/: CallbackFunc.h  DHDecoder.h  MonitorWall.grpc.pb.h  MonitorWall.pb.h  SWKJ_Decoder.h  Utils.h  dhconfigsdk.h
proto/: MonitorWall.proto
src/: CallbackFunc.cpp  DHDecoder.cpp  GRPCServer.cpp  MonitorWall.grpc.pb.cc  MonitorWall.pb.cc  SWKJ_Decoder.cpp  Utils.cpp
test/: GRPCClient.cpp
